# manic

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUSINESS-IDEAS.md  CAPABILITIES.md  Cargo.toml  GOAL.md  LANGUAGE.md  LICENSE  LICENSE-FONTS  PUBLISHING.md  README.md  ROADMAP.md  SYMPY.md  SYSTEM_PROMPT.md
.github/workflows/: deploy-manic.yml
assets/: diagrams-manifest.json
assets/fonts/: README.md
assets/maps/: README.md  india-ne-110m.geojson
book/: .gitignore  book.toml  videos.txt
book/samples/: hello.manic  loop.manic  motion.manic  reveal.manic  shapes.manic  template-mono.manic  text.manic  threed.manic  timing.manic
book/src/: 3d.md  SUMMARY.md  assets.md  colour.md  creator-parameters.md  creator-reactive.md  creator-reels.md  creator-stages.md  creator-visual-checks.md  elevating.md  ex-3d.md  ex-algorithms.md  ex-boolean.md  ex-calculus.md  ex-creator.md  ex-generative.md  ex-geometry.md  ex-graphs.md  ex-grids.md  ex-linalg.md  ex-ml.md  ex-optics.md  ex-physics.md  ex-stats.md  ex-systems.md  ex-text.md  ex-transforms.md  ex-vectors.md  examples.md  getting-started.md  introduction.md  kits.md  language-layer.md  ml.md  motion-graphics.md  shapes.md  systems-icons.md  systems.md  templates.md  timing.md  (+2 more)
crates/manic-lang/: Cargo.toml
crates/manic-lang/src/: ast.rs  catalog.rs  diag.rs  expand.rs  lexer.rs  lib.rs  parser.rs  services.rs  wasm.rs
docker/: Dockerfile
examples/: aes-decrypt.manic  aes-encrypt.manic  aes-round.manic  aes-story.manic  aws-clustered-web-services.manic  creator-v2-latex-algebra.manic  creator-v2-latex-calculus.manic  creator-v2-latex-physics.manic  creator-v2-olympiad-geometry.manic  creator-v2.manic  cubic-graphs.manic  derivative-of-ln-x.manic  gcp-clustered-web-services.manic  integral-sqrt-tanx.manic  k8s-cluster-components.manic  k8s-three-tier.manic  map-border-poc.manic  motion-flow-foundation.manic  motion-graphics.manic  prompt-test-10.manic  prompt-test-11.manic  prompt-test-12.manic  prompt-test-13.manic  prompt-test-14.manic  prompt-test-15.manic  prompt-test-16.manic  prompt-test-2.manic  prompt-test-3.manic  prompt-test-4.manic  prompt-test-5.manic  prompt-test-6.manic  prompt-test-7.manic  prompt-test-8.manic  prompt-test-9.manic  prompt-test.manic  quadratic-formula-continuity.manic  quiz-euler.manic  quiz-skins.manic  reactive-integral.manic  reactive-math-journey.manic  (+8 more)
posts/: manic-creator-journey.md  manic-flowcharts.md  manic-physics-freekick.md  manic-reels-shorts.md
reddit/: .gitignore  README.md  manic_reddit.py  requirements.txt  test_manic_reddit.py
scripts/: audit-arity.py  build-linux.sh  deploy-assets.sh  ec2-setup.sh  embed-videos.sh  gen-diagram-manifest.py  gen-gallery.py  gen-ui-index.py  proto-crypto-story-player.py  proto-crypto-trace-player.py  render-samples.sh  update-youtube.py
src/: animate.rs  assets.rs  audit.rs  branding.rs  easing.rs  geom.rs  latex.rs  layout.rs  lib.rs  movie.rs  namehint.rs  ode.rs  player.rs  preset.rs  primitives.rs  primitives3d.rs  record.rs  render.rs  render3d.rs  scene.rs  style.rs  text.rs  timeline.rs
src/kits/: algo.rs  brand.rs  creator.rs  diagram_icons.rs  geo.rs  grid.rs  map.rs  math.rs  ml.rs  ml_attention.rs  ml_decode.rs  ml_embedding.rs  ml_tensor.rs  ml_transformer.rs  mod.rs  physics.rs  stats.rs  std.rs  systems.rs  three.rs
src/kits/optics/: builtins.rs  dispersion.rs  mod.rs  trace.rs
src/lang/: ast.rs  diag.rs  lexer.rs  lower.rs  mod.rs  parser.rs
web/: README.md  index.html
youtube/: .gitignore  README.md  manic_youtube.py  upload_state.json
