[package]
name = "manic"
version = "0.1.0"
edition = "2021"
description = "Neon-terminal 2D animation engine for Math & algorithm & data-structure explainer videos"
license = "MIT"
authors = ["Anish Nath <anish2good@yahoo.co.in>"]
readme = "README.md"
keywords = ["animation", "visualization", "macroquad", "explainer", "algorithms"]
categories = ["graphics", "multimedia::video", "visualization"]
include = [
    "src/**",
    "examples/**",
    "assets/**",
    "README.md",
    "ARCHITECTURE.md",
    "LICENSE",
    "LICENSE-FONTS",
]

[workspace]
members = ["crates/manic-lang"]

[dependencies]
manic-lang = { path = "crates/manic-lang" }  # macroquad-free DSL front-end (lexer/parser/ast/diag)
macroquad = "0.4"
geo = "0.29"        # robust 2D polygon boolean ops (union/intersection/…)
earcutr = "0.4"     # triangulate holed/multi-piece boolean results for fill
# LaTeX math typesetting (pure-Rust KaTeX renderer). `embed-fonts` bakes the
# KaTeX TTFs in → self-contained binary, no system fonts / no font dir.
ratex-parser = "0.1"
ratex-layout = "0.1"
ratex-render = { version = "0.1", features = ["embed-fonts"] }
ratex-types = "0.1"   # DisplayList / DisplayItem / Color (recolour before render)
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
