[package]
name = "manic-lang"
version = "0.1.0"
edition = "2021"
description = "The manic DSL language front-end: lexer, parser, AST, and diagnostics. No graphics dependency — compiles to WASM for in-browser editor tooling (highlighting, autocomplete, error-checking)."
license = "MIT"
repository = "https://github.com/anishnath/manic"
readme = "README.md"
keywords = ["dsl", "parser", "lexer", "language", "wasm"]
categories = ["parser-implementations", "wasm", "compilers"]

[lib]
# rlib for the engine (path dep); cdylib so the `wasm` feature can produce a
# wasm module for the browser.
crate-type = ["cdylib", "rlib"]

[features]
# `--features wasm` adds the wasm-bindgen exports (tokenize/check/complete).
wasm = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
